--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <select>
               <option value="live">Alisson</option>
               <option value="live">Isabelle</option>
-              <option value="live">Eu</option>
-              <option value="live">Cu</option>
+              <option value="live">Alisson</option>
+              <option value="live">Alves</option>
             </select>     
             <div class="comment">
               <label for="event-comment">Feedback sobre o mentor</label>
@@ -94,7 +94,7 @@
             </div> 
           </fieldset>
         <footer>
-         <input class="button" type="submit" form="my-form" value="Salvar-evento">
+         <input class="button" type="submit" form="my-form" value="Salvar evento">
          </footer>
     </form>
   </div>
